# figtree-news

./: .gitignore  AGENTS.md  DECOMPOSITION_SYSTEM.md  README.md  pyproject.toml  requirements.txt
demo/: sources.json
examples/: sample_sources.json
figtree_news/: __init__.py  cli.py  cogitate.py  config.py  correct.py  crawler.py  decompose.py  eval.py  evaluate.py  export.py  ingest.py  lineage.py  llm_config.py  pipeline.py  query.py  search_index.py  searxng.py  summarize_news.py  trust.py
figtree_news/web/: __init__.py  serve.py
figtree_news/web/static/: style.css
figtree_news/web/templates/: article.html  base.html  index.html  lineage.html  narrative.html  search.html  source.html
systemd/: figtree-news-crawler.service  figtree-news-web.service  install_systemd.sh
tests/: test_config_export.py  test_crawler.py  test_lineage.py  test_web.py
